--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,6 @@ footer {
     padding: 20px;
     margin-top: 40px;
 }
-
 /* Responsive design */
 @media (max-width: 768px) {
     header h1 {
@@ -174,16 +173,45 @@ footer {
         font-size: 1.2em;
     }
 
+    nav {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(51, 51, 51, 0.9);
+    }
+
     nav ul {
-        flex-direction: column;
+        display: flex;
+        justify-content: space-around;
     }
 
     nav ul li {
-        margin: 5px 0;
+        margin: 0;
+    }
+
+    nav ul li a {
+        padding: 10px;
+        font-size: 0.8em;
+        text-align: center;
+    }
+
+    nav ul li a i {
+        display: block;
+        font-size: 1.2em;
+        margin-bottom: 5px;
+    }
+
+    nav ul li a span {
+        display: none;
     }
 
     .skills-container {
         flex-direction: column;
+    }
+
+    main {
+        padding-bottom: 60px; /* Add space for the fixed bottom nav */
     }
 }
 
